# BudgeterProject

./: .gitignore  DESIGN.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: balance.json  bills.json  goals.json  transactions.json
src/: budgeter_core.py  budgeter_gui.py  dialogs.py  main_window.py  storage.py  theme.py  widgets.py
tests/: test_budgeter_core.py  test_storage.py
